--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
 </head>
 <body>
-
+    <section id="Melzinha"
+    tabindex="0">
     <h1> Mel linda❤️</h1>
 
-    <img src="mel.jpeg" alt="Dark's Anime">
+    <img src="mel.jpeg" alt="Mel">
 
     <h2> Isabela mãe da mel </h2>
 
