--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         Definição: Controla a capitalização do texto.
         Para que serve: Colocar o texto em letras maiúsculas, minúsculas ou a primeira de cada palavra em maiúscula.
         Exemplos: uppercase, lowercase, capitalize.
-
+        <h3><section>SEGUNDO TRIMESTRE</section>
+<footer><p>Isabela schwingl</p>
+    <p>3 ano</p>
+    <p>colégio civico militar frentino sckeer</p>
+</footer>
 </body>
 </html>
