--- a/index.html
+++ b/index.html
@@ -3,34 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>trabalho de programação</title>
+    <title>Concurso Agrinho 2025</title>
 
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <section id="Trabalho de programação"tabindex="0">
+    <section id="Concurso Agrinho 2025"tabindex="0">
 
-    <h1>trabalho de programação</h1>
+    <h1>Concurso Agrinho 2025</h1>
 
-    <img src="prog.jpeg" alt="programação">
-    <img src="linguagens-de-programacao.jpeg.webp" alt="Descrição da imagem" width="300">
-
+    <img src="compo e cidade.png" alt="programação">
+    <img src="agrinho.webp" alt="Descrição da imagem" width="300">
+    
     <h2>ISABELA n:10 </h2>
     
-    <h3> <p> Responsividade: é a capacidade de um site ou aplicativo se ajustar automaticamente a diferentes tamanhos de tela, dispositivos 
-        e resoluções, garantindo uma boa experiência de usuário, independentemente do dispositivo utilizado (como desktop, tablet ou smartphone). <p> 
+    <h3> <p> Desenvolvido pelo Sistema Faep, em parceria com o Governo do Paraná, o concurso tem como tema nesta edição "Festejando a Conexão Campo-Cidade". As categorias para alunos e professores de escolas estaduais são AgroRobótica, Robótica e Relatório de Pesquisa – essa com o tema Boas Práticas Agrícolas.
+      . <p> 
 
-        <p> A propriedade alt sereve para informar o que está contido naquela tag, caso seu conteúdo não possa ser exibido corretamente.<P>
+        <p> O objetivo do Programa Agrinho é promover a educação e conscientização sobre a agricultura e o meio ambiente, principalmente nas áreas rurais.<P>
 
-        <P> A tag input é usada em HTML para criar campos de entrada em formulários, permitindo que os usuários insiram dados.
-         Ela pode ser usada para diversos tipos de entrada, como texto, senha, e-mail, número, checkbox, rádio, entre outros.</P>
+        <P> Oferece um conjunto diversificado de categorias para alunos e professores da rede estadual, incluindo:Redação;Desenho;Robótica e AgroRobótica;Relatório de Pesquisa;Programação;Experiência Pedagógica e Relato Escola Agrinho;Relatório Município Agrinho;Relatório de Pesquisa;Robótica;</P>
 
-        <p> A tag label é usada em HTML para associar um texto descritivo a um elemento de entrada (input), tornando a interação do usuário mais
-           acessível e intuitiva.Ela melhora a usabilidade dos formulários ao permitir que o usuário clique no texto do rótulo para ativar o campo correspondente.</p>
+        <p> A grande final será em outubro e premiará os vencedores com prêmios como notebooks, smartphones e tablets. </p>
 
     <section id="formulario">
-     <h2>Preencha o Formulário</h2>
+     <h2>Preencha o Formulário para participar</h2>
        <form>
        <label for="nome">Nome:</label>
        <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
@@ -59,9 +57,10 @@
     <title>Vídeo Incorporado</title>
   </head>
   <body>
-    <h1>Vídeo do YouTube </h1>
+    <h1>Oque é o agrinho?</h1>
     <iframe width="560" height="315" 
-     src="https://www.youtube.com/embed/UjZ0apcjStI?autoplay=1&mute=1"; 
+     src="<iframe width="560" height="315" src="https://youtu.be/Cq1ZfeQU2-k?feature=shared" 
+     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"; 
      frameborder="0" 
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
      allowfullscreen>
